2009-04-23 michaudm <michael.michaud@free.fr>
    Fixed issue related to "Newly created layers are marked with
    featureCollectionModified=true" (see 2009-02-20) :
    need to set layerManager.setFiringEvents(false) during layer loading in
    AddDataStoreLayerPlugIn.
    Note that there is duplicated code since addition of the new
    AddDataStoreLayerWizard (see issue fixed on 2009-04-05)

2009-04-20 Andreas Schmitz <schmitz@lat-lon.de>
	Fixed proper disposal of progress dialog.

2009-04-11 mentaer <sstein@geo.unizh.ch>

           **** release of OpenJUMP 1.3 ****
           
2009-04-05  michaudm <michael.michaud@free.fr>
    Fixed issue related to "Newly created layers are marked with
    featureCollectionModified=true" (see 2009-02-20) :
    need to set layerManager.setFiringEvents(false) during layer loading in
    AddDataStoreLayerWizard.
           
2009-03-29 mentaer <sstein@geo.uzh.ch>
    Extended layer attribute statistics table by entry that holds
    the sum value. (closed Feature request 2716204)
    changed:
    org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewTableModel
    org.openjump.core.apitools.FeatureCollectionTools (extended by getSum...)
    org.openjump.core.attributeoperations.AttributeOp (extended to accept Feature[])
    
2009-03-28 mentaer <sstein@geo.uzh.ch>
    Fixed issue (bugreport) 2716198 for color theming. New classification 
    methods work now with integer attributes too.
    
2009-03-18 stranger <schmitz@lat-lon.de>
    Encoding layer names and format properly.

2009-03-15 mentaer <sstein@geo.uzh.ch>
    Fixed issue (bugreport) 2660283 for Jython console - the button added
    by RoadTool.py is now shown right of the textfield and not below.
    (However, the bug report contains some more comments)
    
2009-03-15 michaudm <michael.michaud@free.fr>
    Add, remove and fix three small scripts in the BeanTools script directory
    
2009-03-12 javamap <sunburned.surveyor@gmail.com>